@@ -124,3 +124,4 @@ ATTR_polljobs,
 ATTR_downonerror,
 ATTR_jobnanny,
 ATTR_momjobsync,
+ATTR_pbsversion,
